--- a/WebApplication/src/WebApplication/Views/Home/About.cshtml
+++ b/WebApplication/src/WebApplication/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information about CI in Docker!</p>
+<p>Use this area to provide additional information about CI in Docker with Luis!</p>
