--- a/WebApplication/src/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/src/WebApplication/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - WebApplication</p>
+            <p>&copy; 2016 - WebApplication with CI</p>
         </footer>
     </div>
 
